--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 services:
   embedding-service:
     build: .
+    ports:
+      - "8001:8000"
     environment:
       - PYTHONUNBUFFERED=1
-    ports:
-      - 8001:8000
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
