--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 grpcio==1.67.0
 grpcio-tools==1.67.0
+onnx==1.17.0
 onnxruntime==1.19.2
+sentence-transformers==3.2.1
 torch==2.5.0
 transformers==4.45.2
